# atp

./: .gitignore  ATP_Developer_Document.md  Cargo.toml  Makefile  README.md  REFACTORING_STRATEGY.md  dfx.json  flake.nix  result
.github/: BADGES.md
.github/workflows/: release.yml  test.yml
docs/: api_reference.md  architecture.md  contribution_guide.md  getting_started.md  integration_guide.md  overview.md
src/atp/: Cargo.toml  atp.did  config.toml
src/atp/src/: endpoints.rs  infrastructure.rs  lib.rs  lifecycle.rs  utils.rs
src/atp/src/application/: dtos.rs
src/atp/src/application/dtos/: account_messages.rs  account_reply.rs  eip1559.rs
src/atp/src/application/services/: account_service.rs
src/atp/src/domain/: models.rs  repositories.rs
src/atp/src/domain/models/: account.rs  signer.rs
src/atp/src/domain/repositories/: account_repository.rs  signer_repository.rs
src/atp/src/endpoints/: account_endpoints.rs
src/atp/src/infrastructure/: repositories.rs
src/atp/src/infrastructure/database/: core.rs  memory.rs
src/atp/src/infrastructure/database/core/: db_schema.rs  nosql_db.rs  types.rs
src/atp/src/infrastructure/database/memory/: stable_memory.rs
src/atp/src/infrastructure/repositories/: account_repository_impl.rs  account_repository_nosql.rs  signer_repository_impl.rs
src/atp/src/utils/: config.rs  eth_utils.rs  macros.rs
src/atp/src/utils/ic/: api.rs  mock.rs
src/atp_backend/: Cargo.toml
target-doc/: .rustc_info.json  .rustdoc_fingerprint.json
target-doc/debug/.fingerprint/block-buffer-68888e694a53fca2/: lib-block_buffer  lib-block_buffer.json
target-doc/debug/.fingerprint/cfg-if-ad924814d1857747/: lib-cfg_if  lib-cfg_if.json
target-doc/debug/.fingerprint/const-oid-8d6ab32a2e90acd1/: lib-const_oid  lib-const_oid.json
target-doc/debug/.fingerprint/cpufeatures-c21465731121e9eb/: lib-cpufeatures  lib-cpufeatures.json
target-doc/debug/.fingerprint/crc32fast-13b2fe557cfc6eae/: lib-crc32fast  lib-crc32fast.json
target-doc/debug/.fingerprint/crypto-common-ee57ec7faeb9bb97/: lib-crypto_common  lib-crypto_common.json
target-doc/debug/.fingerprint/data-encoding-10bd9595d6a2da9a/: lib-data_encoding  lib-data_encoding.json
target-doc/debug/.fingerprint/digest-e1cb2fd67c0b4bba/: lib-digest  lib-digest.json
target-doc/debug/.fingerprint/generic-array-1b08e2d9651d5f11/: lib-generic_array  lib-generic_array.json
target-doc/debug/.fingerprint/generic-array-a57c54402707307c/: build-script-build-script-build  build-script-build-script-build.json
target-doc/debug/.fingerprint/generic-array-fc76b8ca1737b417/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-doc/debug/.fingerprint/ic-stable-structures-f6d6a29864686343/: doc-lib-ic_stable_structures  doc-lib-ic_stable_structures.json
target-doc/debug/.fingerprint/ic_principal-a4b6dac185a9dd07/: lib-ic_principal  lib-ic_principal.json
target-doc/debug/.fingerprint/proc-macro2-341fde223cefcc91/: lib-proc_macro2  lib-proc_macro2.json
target-doc/debug/.fingerprint/proc-macro2-4b131a9cc84a5cde/: build-script-build-script-build  build-script-build-script-build.json
target-doc/debug/.fingerprint/proc-macro2-a04dab3fe43a8488/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-doc/debug/.fingerprint/quote-83f067956e47eed1/: lib-quote  lib-quote.json
target-doc/debug/.fingerprint/serde-1cd7fabbb2dd3dd8/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-doc/debug/.fingerprint/serde-bde39c2cfbfb7631/: build-script-build-script-build  build-script-build-script-build.json
target-doc/debug/.fingerprint/serde-e7a31d37d6983447/: lib-serde  lib-serde.json
target-doc/debug/.fingerprint/serde_derive-41df1842796120d5/: lib-serde_derive  lib-serde_derive.json
target-doc/debug/.fingerprint/sha2-2326e62560cbe41f/: lib-sha2  lib-sha2.json
target-doc/debug/.fingerprint/subtle-863cdd66e108f629/: lib-subtle  lib-subtle.json
target-doc/debug/.fingerprint/syn-b78e5fa1fe09cbee/: lib-syn  lib-syn.json
target-doc/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
target-doc/doc/ic_stable_structures/: all.html  constant.MAX_PAGES.html  index.html  sidebar-items.js  struct.GrowFailed.html  struct.RestrictedMemory.html  trait.Memory.html  type.DefaultMemoryImpl.html
tests/: Cargo.toml  README.md  integration_tests.rs  lib.rs  stress_tests.rs  test_utils.rs
tests/atp/: atp_test_utils.rs  integration_tests.rs
tests/example-canister/: Cargo.toml
tests/example-canister/src/: lib.rs
tests/ic-nosql/: ic_nosql_test_utils.rs  stress_tests.rs
tests/ic_nosql/: ic_nosql_test_utils.rs  stress_tests.rs
(+125 files in other folders)
