[workspace]
members = [
    "src/atp",
    "packages/caip",
    "packages/chain-registry",
    "packages/ic-nosql",
    "packages/ic-nosql/example-canister",
    "tests"
, "packages/chain-utils"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true

[workspace.dependencies]
ic-nosql = { path = "packages/ic-nosql" }
atp-caip = { path = "packages/caip" }
atp-chain-registry = { path = "packages/chain-registry" }
atp-chain-utils = { path = "packages/chain-utils" }
atp = { path = "src/atp" }
example-canister = { path = "packages/ic-nosql/example-canister" }
