[package]
name = "ic-nosql-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-nosql = { path = "../packages/ic-nosql" }
example-canister = { path = "../packages/ic-nosql/example-canister" }
atp = { path = "../src/atp" }

candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pocket-ic = "=9.0.2"
hex = "0.4.3"

[lib]
name = "ic_nosql_tests"
path = "lib.rs"

