[package]
name = "ic-nosql-tests"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
ic-nosql = { workspace = true }
example-canister = { workspace = true }
atp = { workspace = true }
atp-caip = { workspace = true }

candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pocket-ic = "=9.0.2"
hex = "0.4.3"

[lib]
name = "ic_nosql_tests"
path = "lib.rs"

